jump functionality fix bugs

--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ h3 {
 }
 
 .empire {
-    background-color: red;
+    background: red;
     width: 60px;
     height: 60px;
     border-radius: 50%;
